--- a/decoupled-site/backend/appsettings.json
+++ b/decoupled-site/backend/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
+  // "ConnectionStrings": {
+  //   "EPiServerDB": "Data Source=localhost,1433;Initial Catalog=musicfestival;User=sa;Password=Admin123!;Trust Server Certificate=True;Connect Timeout=30"
+  // },
   "Optimizely": {
     "ContentGraph": {
       "GatewayAddress": "https://cg.optimizely.com",
