Remove the default Single_key

--- a/decoupled-site/backend/appsettings.json
+++ b/decoupled-site/backend/appsettings.json
@@ -15,7 +15,7 @@
       "GatewayAddress": "https://cg.optimizely.com",
       "AppKey": "INPUT_APP_KEY_HERE",
       "Secret": "INPUT_SECRET_KEY_HERE",
-      "SingleKey": "XoXsOl2bScWZzguDUylvaaZ5PEAAH5tg5qme0NebCHzEpyO4",
+      "SingleKey": "INPUT_SINGLE_KEY_HERE",
       "Experimental": true,
       "AllowSendingLog": "true",
       "AllowSyncDraftContent": true
