add ping middleware and update dockerifle

--- a/decoupled-site/backend/Dockerfile
+++ b/decoupled-site/backend/Dockerfile
@@ -1,11 +1,24 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+# Build image
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 
-WORKDIR /netcoreapp
+WORKDIR /app
 
-COPY netcoreapp/ .
+COPY . .
+
+RUN dotnet restore
+
+RUN dotnet publish -c Release -o /out
+
+COPY ./App_Data /out
+
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
+
+WORKDIR /app
+
+COPY --from=build /out .
 
 ENV ASPNETCORE_URLS=http://+:80
-ENV ASPNETCORE_ENVIRONMENT=Production
+# ENV ASPNETCORE_ENVIRONMENT=Production
 
 # Expose port 80
 EXPOSE 80
