update Dockerfile and add ssh config

--- a/decoupled-site/backend/Dockerfile
+++ b/decoupled-site/backend/Dockerfile
@@ -10,6 +10,8 @@ RUN dotnet restore
 RUN dotnet publish -c Release -o /out
 
 COPY ./App_Data /out
+COPY ./entrypoint.sh /out
+COPY ./sshd_config /out
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
 
@@ -20,7 +22,19 @@ COPY --from=build /out .
 ENV ASPNETCORE_URLS=http://+:80
 # ENV ASPNETCORE_ENVIRONMENT=Production
 
-# Expose port 80
-EXPOSE 80
+RUN ls -al
 
-ENTRYPOINT ["dotnet", "MusicFestival.Backend.dll"]
+# Start and enable SSH
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends dialog \
+    && apt-get install -y --no-install-recommends openssh-server \
+    && echo "root:Docker!" | chpasswd \
+    && chmod u+x ./entrypoint.sh
+
+COPY sshd_config /etc/ssh/
+
+# Expose port 80 2222
+EXPOSE 80 2222
+
+#ENTRYPOINT ["dotnet", "MusicFestival.Backend.dll"]
+ENTRYPOINT [ "./entrypoint.sh" ]
