--- a/decoupled-site/backend/Dockerfile
+++ b/decoupled-site/backend/Dockerfile
@@ -9,7 +9,8 @@ RUN dotnet restore
 
 RUN dotnet publish -c Release -o /out
 
-COPY ./App_Data /out
+COPY ./App_Data/DefaultSiteContent.episerverdata /out/App_Data/DefaultSiteContent.episerverdata
+COPY ./App_Data/blobs_default /out/App_Data/blobs
 COPY ./entrypoint.sh /out
 COPY ./sshd_config /out
 
@@ -20,9 +21,7 @@ WORKDIR /app
 COPY --from=build /out .
 
 ENV ASPNETCORE_URLS=http://+:80
-# ENV ASPNETCORE_ENVIRONMENT=Production
-
-RUN ls -al
+ENV ASPNETCORE_ENVIRONMENT=Production
 
 # Start and enable SSH
 RUN apt-get update \
