--- a/decoupled-site/frontend/package.json
+++ b/decoupled-site/frontend/package.json
@@ -33,7 +33,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "content-definitions:push": "content-definitions push manifest.json -s http://localhost:8082 --authority http://localhost:8082 --client-id cli --client-secret cli --allowed-upgrades major",
+    "content-definitions:pull": "content-definitions pull manifest.json -s http://localhost:8082 --authority http://localhost:8082 --client-id cli --client-secret cli"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@episerver/content-definitions": "^1.1.0",
     "css-loader": "^6.7.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
