--- a/decoupled-site/frontend/codegen.yaml
+++ b/decoupled-site/frontend/codegen.yaml
@@ -1,4 +1,4 @@
-schema: ${CONTENT_GRAPH_ENDPOINT}
+schema: ${CONTEN_GRAPH_GATEWAY_URL}
 documents: './src/**/*.graphql'
 generates:
   ./src/generated.ts:
