--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,9 @@
 name: Terraform
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
 jobs:
   create-backend:
