--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,7 +4,8 @@ name: Terraform
 #   push:
 #     branches:
 #       - main
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
 
 jobs:
   create-backend:
