--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,11 +1,12 @@
 name: Terraform
 
-# on:
-#   push:
-#     branches:
-#       - main
-on: 
+on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+# on: 
+#   workflow_dispatch:
 
 jobs:
   create-backend:
