--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,11 +1,11 @@
 name: Terraform
 
-on:
-  push:
-    branches:
-      - main
-# on: 
-#   workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+on: 
+  workflow_dispatch:
 
 jobs:
   create-backend:
