--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,10 +82,10 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform plan
+        working-directory: .github/workflow
         run: |
           terraform init
           terraform plan -out=tfplan
-        # working-directory: .github/workflow
         env:
           TF_VAR_subscription_id: ${{ secrets.TF_VAR_subscription_id }}
           TF_VAR_client_id: ${{ secrets.TF_VAR_client_id }}
