--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -114,8 +114,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download Terraform plan artifact
+        working-directory: .github/workflows
         uses: actions/download-artifact@v3
-        # working-directory: .github/workflow
         with:
           name: terraform-plan
 
