--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -78,8 +78,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Terraform init
-        uses: hashicorp/setup-terraform@v1
+      # - name: Terraform init
+      #   uses: hashicorp/setup-terraform@v1
 
       - name: Terraform plan
         working-directory: .github/workflows
