--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,43 +92,14 @@ jobs:
           TF_VAR_client_secret: ${{ secrets.TF_VAR_client_secret }}
           TF_VAR_tenant_id: ${{ secrets.TF_VAR_tenant_id }}
 
-      - name: Save Terraform plan
-        uses: actions/upload-artifact@v3
-        with:
-          name: terraform-plan
-          path: .github/workflows/tfplan
+      # - name: Save Terraform plan
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: terraform-plan
+      #     path: .github/workflows/tfplan
       
-      - name: check directory
-        run: ls -al .
-
-  terraform-apply:
-    runs-on: ubuntu-latest
-    needs: terraform-init-plan
-    # permissions:
-    #   approvals: 2
-    # defaults:
-    #   run:
-    #     working-directory: .github/workflows
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Download Terraform plan artifact
-        # working-directory: .github/workflows
-        uses: actions/download-artifact@v3
-        with:
-          name: terraform-plan
-
-      - name: check directory .github/workflows
-        working-directory: .github/workflows
-        run: ls -al .
-
-      - name: move to workflow
-        run: mv tfplan .github/workflows/tfplan 
-
-      - name: Terraform init
-        uses: hashicorp/setup-terraform@v1
-
+      # - name: check directory
+      #   run: ls -al .
       - name: Terraform apply
         working-directory: .github/workflows
         run: |
@@ -138,3 +109,41 @@ jobs:
           TF_VAR_client_id: ${{ secrets.TF_VAR_client_id }}
           TF_VAR_client_secret: ${{ secrets.TF_VAR_client_secret }}
           TF_VAR_tenant_id: ${{ secrets.TF_VAR_tenant_id }}
+
+  # terraform-apply:
+  #   runs-on: ubuntu-latest
+  #   needs: terraform-init-plan
+  #   # permissions:
+  #   #   approvals: 2
+  #   # defaults:
+  #   #   run:
+  #   #     working-directory: .github/workflows
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+
+  #     - name: Download Terraform plan artifact
+  #       # working-directory: .github/workflows
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: terraform-plan
+
+  #     - name: check directory .github/workflows
+  #       working-directory: .github/workflows
+  #       run: ls -al .
+
+  #     - name: move to workflow
+  #       run: mv tfplan .github/workflows/tfplan 
+
+  #     - name: Terraform init
+  #       uses: hashicorp/setup-terraform@v1
+
+  #     - name: Terraform apply
+  #       working-directory: .github/workflows
+  #       run: |
+  #         terraform apply -auto-approve tfplan
+  #       env:
+  #         TF_VAR_subscription_id: ${{ secrets.TF_VAR_subscription_id }}
+  #         TF_VAR_client_id: ${{ secrets.TF_VAR_client_id }}
+  #         TF_VAR_client_secret: ${{ secrets.TF_VAR_client_secret }}
+  #         TF_VAR_tenant_id: ${{ secrets.TF_VAR_tenant_id }}
