--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -40,3 +40,8 @@ jobs:
           TF_VAR_client_id: ${{ secrets.TF_VAR_client_id }}
           TF_VAR_client_secret: ${{ secrets.TF_VAR_client_secret }}
           TF_VAR_tenant_id: ${{ secrets.TF_VAR_tenant_id }}
+  
+  deploy-backend-image:
+    needs: [create-backend]
+    secrets: inherit
+    uses: ./.github/workflows/deploy-backend.yml
