--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -2,9 +2,9 @@ name: Deploy Backend Docker Image
 
 on:
   workflow_call:
+  workflow_dispatch:
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     
