--- a/decoupled-site/backend/MusicFestival.Backend.csproj
+++ b/decoupled-site/backend/MusicFestival.Backend.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="EPiServer.CMS" Version="12.9.0" />
     <PackageReference Include="EPiServer.ContentDefinitionsApi" Version="3.5.0" />
     <PackageReference Include="EPiServer.ContentDeliveryApi.Cms" Version="3.5.0" />
+    <PackageReference Include="EPiServer.ContentManagementApi" Version="3.5.0" />
     <PackageReference Include="EPiServer.OpenIDConnect" Version="3.5.0" />
     <PackageReference Include="EPiServer.OpenIDConnect.UI" Version="3.5.0" />
     <PackageReference Include="Optimizely.ContentGraph.Cms" Version="2.2.0" />
