--- a/decoupled-site/next/.env.local
+++ b/decoupled-site/next/.env.local
@@ -5,7 +5,7 @@ AZURE_AD_TENANT_ID=7c4a1b79-4b8e-4ac7-b7e1-c5c3c5a4c139
 OKTA_CLIENT_ID=0oa7c6ejkpzJ0CtcS1d7
 OKTA_ISSUER=prep.login.optimizely.com/oauth2
 NEXTAUTH_SECRET=JU1SARGXlbKHEIurfAQMtKu8j3ORBoGczJIzMJswVuk
-NEXT_PUBLIC_CONTENT_GRAPH_ENDPOINT=https://dev.cg.optimizely.com/content/v2?experimental=true&auth=4vnxJuIFeaCP5IRaMcIExDKtK3nDjOv2aLCYONXxScqP0lL5
+NEXT_PUBLIC_CONTENT_GRAPH_ENDPOINT=https://dev.cg.optimizely.com/content/v2?experimental=true&auth=ecAFyEXbIUuRGHoDSfgEDJmJMvvZVNVDMG2ciS4ri4PgfeTA&cache=false
 
 NEXT_PUBLIC_CG_PROXY_URL=https://alloy123.azurewebsites.net/EpiServer/ContentGraph/CGProxy/Query
 
