--- a/decoupled-site/next/package.json
+++ b/decoupled-site/next/package.json
@@ -11,12 +11,9 @@
     "generate:local": "DOTENV_CONFIG_PATH=./.env.local yarn generate -r dotenv/config"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.10",
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/typescript": "^3.0.2",
-    "@graphql-codegen/typescript-graphql-request": "^4.5.9",
     "@graphql-codegen/typescript-operations": "^3.0.2",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
     "@okta/okta-auth-js": "^7.2.0",
     "@tanstack/react-query": "^4.28.0",
@@ -28,6 +25,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "html-react-parser": "^3.0.15",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.3",
