CG-4067: Integrate with appInsights

--- a/decoupled-site/next/.env.local
+++ b/decoupled-site/next/.env.local
@@ -1,14 +1,16 @@
 NEXTAUTH_URL=http://localhost:3000/
 AZURE_AD_CLIENT_ID=355bdf4f-d596-4db7-8efe-8e3bc24a3611
 AZURE_AD_CLIENT_SECRET=dBo8Q~qaopwwO-O3gL_Hv58HQHTJ1faWPpFxudcl
-AZURE_AD_TENANT_ID=7c4a1b79-4b8e-4ac7-b7e1-c5c3c5a4c139 
+AZURE_AD_TENANT_ID=7c4a1b79-4b8e-4ac7-b7e1-c5c3c5a4c139
 OKTA_CLIENT_ID=0oa7c6ejkpzJ0CtcS1d7
 OKTA_ISSUER=prep.login.optimizely.com/oauth2
 NEXTAUTH_SECRET=JU1SARGXlbKHEIurfAQMtKu8j3ORBoGczJIzMJswVuk
-NEXT_PUBLIC_CONTENT_GRAPH_ENDPOINT=https://dev.cg.optimizely.com/content/v2?experimental=true&auth=ecAFyEXbIUuRGHoDSfgEDJmJMvvZVNVDMG2ciS4ri4PgfeTA&cache=false
+NEXT_PUBLIC_CONTENT_GRAPH_ENDPOINT=http://localhost:4000/content/v2?experimental=true&auth=ecAFyEXbIUuRGHoDSfgEDJmJMvvZVNVDMG2ciS4ri4PgfeTA&cache=false
 
 NEXT_PUBLIC_CG_PROXY_URL=https://alloy123.azurewebsites.net/EpiServer/ContentGraph/CGProxy/Query
 
 NEXT_PUBLIC_CONTENT_DELIVERY_API=https://alloy123.azurewebsites.net
 NEXT_PUBLIC_LOGIN_AUTHORITY=https://alloy123.azurewebsites.net
 NEXT_PUBLIC_LOGIN_CLIENT_ID=frontend
+
+NEXT_PUBLIC_APPINSIGHTS_CONN_STR=
