--- a/decoupled-site/next/package.json
+++ b/decoupled-site/next/package.json
@@ -29,6 +29,7 @@
     "html-react-parser": "^3.0.15",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.3",
+    "next-applicationinsights": "^1.0.4",
     "next-auth": "3.29.0",
     "oidc-client": "^1.11.5",
     "react": "18.2.0",
