--- a/decoupled-site/next/package.json
+++ b/decoupled-site/next/package.json
@@ -15,7 +15,6 @@
     "@graphql-codegen/typescript": "^3.0.2",
     "@graphql-codegen/typescript-operations": "^3.0.2",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
-    "@okta/okta-auth-js": "^7.2.0",
     "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
@@ -29,7 +28,7 @@
     "html-react-parser": "^3.0.15",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.3",
-    "next-auth": "3.29.0",
+    "next-auth": "^4.22.1",
     "oidc-client": "^1.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
