Update to ContentGraph.Cms v 3.0.0

--- a/decoupled-site/backend/appsettings.json
+++ b/decoupled-site/backend/appsettings.json
@@ -16,9 +16,9 @@
       "AppKey": "",
       "Secret": "",
       "SingleKey": "",
-      "Experimental": true,
       "AllowSendingLog": "true",
-      "AllowSyncDraftContent": true
+      "ContentVersionSyncMode": "All",
+      "SyncReferencingContents": "true"
     }
   },
   "FRONT_END_URI": ""
