--- a/decoupled-site/backend/MusicFestival.Backend.csproj
+++ b/decoupled-site/backend/MusicFestival.Backend.csproj
@@ -8,12 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPiServer.CMS" Version="12.9.0" />
-    <PackageReference Include="EPiServer.ContentDefinitionsApi" Version="3.5.0" />
-    <PackageReference Include="EPiServer.ContentDeliveryApi.Cms" Version="3.5.0" />
-    <PackageReference Include="EPiServer.ContentManagementApi" Version="3.5.0" />
+    <PackageReference Include="EPiServer.CMS" Version="12.13.1" />
+    <PackageReference Include="EPiServer.CMS.AspNetCore" Version="12.13.1" />
+    <PackageReference Include="EPiServer.CMS.AspNetCore.HtmlHelpers" Version="12.13.1" />
+    <PackageReference Include="EPiServer.CMS.UI.Core" Version="12.17.0" />
+    <PackageReference Include="EPiServer.ContentDefinitionsApi" Version="3.7.0" />
+    <PackageReference Include="EPiServer.ContentDeliveryApi.Cms" Version="3.7.0" />
+    <PackageReference Include="EPiServer.ContentDeliveryApi.Core" Version="3.7.0" />
+    <PackageReference Include="EPiServer.ContentManagementApi" Version="3.7.0" />
+    <PackageReference Include="EPiServer.Framework" Version="12.13.1" />
+    <PackageReference Include="EPiServer.Hosting" Version="12.13.1" />
     <PackageReference Include="EPiServer.OpenIDConnect" Version="3.5.0" />
     <PackageReference Include="EPiServer.OpenIDConnect.UI" Version="3.5.0" />
-    <PackageReference Include="Optimizely.ContentGraph.Cms" Version="2.2.0" />
+    <PackageReference Include="Optimizely.ContentGraph.Cms" Version="3.0.0" />
   </ItemGroup>
 </Project>
