CG-3919: Update README file and samples (#30)
- Fixed OIDC login not working for react-script MusicFestival frontend
site.
- Fixed React-script frontend site yarn generate:local not working on
Windows.
- Updated README for Music Festival backend site, react-script frontend
site and next.js frontend site.
- Added setup.sh script to setup blobs for backend site in Mac and
Linux.
- Updated appsettings.json for backend site to match CMS integration
package 3.0.0

--- a/decoupled-site/backend/appsettings.json
+++ b/decoupled-site/backend/appsettings.json
@@ -8,7 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EPiServerDB": ""
   },
   "Optimizely": {
     "ContentGraph": {
@@ -16,9 +15,9 @@
       "AppKey": "",
       "Secret": "",
       "SingleKey": "",
-      "Experimental": true,
       "AllowSendingLog": "true",
-      "AllowSyncDraftContent": true
+      "ContentVersionSyncMode": "All",
+      "SyncReferencingContents": "true"
     }
   },
   "FRONT_END_URI": ""
