--- a/MusicFestivalNextJsFrontend/package.json
+++ b/MusicFestivalNextJsFrontend/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "graphql-codegen --config graphql.config.yml",
-    "generate:local": "DOTENV_CONFIG_PATH=./.env.local yarn generate -r dotenv/config"
+    "generate:local": "cross-env DOTENV_CONFIG_PATH=./.env.local yarn generate -r dotenv/config"
   },
   "dependencies": {
     "@graphql-codegen/cli": "^3.2.2",
@@ -34,5 +34,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
