Fix rendering in view mode

--- a/samples/musicfestival-frontend-react/.env
+++ b/samples/musicfestival-frontend-react/.env
@@ -1,4 +1,4 @@
-REACT_APP_CG_PROXY_URL=http://localhost:8082/EpiServer/ContentGraph/CGProxy/Query
+REACT_APP_CG_PREVIEW_URL=https://cg.optimizely.com/content/v2
 REACT_APP_CONTENT_GRAPH_GATEWAY_URL=https://cg.optimizely.com/content/v2?auth=INPUT_SINGLE_KEY_HERE
 
 REACT_APP_LOGIN_AUTHORITY=http://localhost:8082
