Enable preview tokens in appsettings.json

--- a/samples/musicfestival-backend-dotnet/appsettings.json
+++ b/samples/musicfestival-backend-dotnet/appsettings.json
@@ -17,7 +17,8 @@
       "SingleKey": "",
       "AllowSendingLog": "true",
       "ContentVersionSyncMode": "All",
-      "SyncReferencingContents": "true"
+      "SyncReferencingContents": "true",
+      "EnablePreviewTokens": "true"
     }
   },
   "FRONT_END_URI": ""
