correct the code

--- a/samples/musicfestival-frontend-nextjs/.env.local
+++ b/samples/musicfestival-frontend-nextjs/.env.local
@@ -1,6 +1,6 @@
 NEXTAUTH_URL=http://localhost:3000/
 AZURE_AD_CLIENT_ID=355bdf4f-d596-4db7-8efe-8e3bc24a3611
-AZURE_AD_CLIENT_SECRET=dBo8Q~qaopwwO-O3gL_Hv58HQHTJ1faWPpFxudcl
+AZURE_AD_CLIENT_SECRET=eOn8Q~KxYudVYDmBs6OYYb9xolWvv~I1LdB1nbSc
 AZURE_AD_TENANT_ID=7c4a1b79-4b8e-4ac7-b7e1-c5c3c5a4c139
 OKTA_CLIENT_ID=0oa7c6ejkpzJ0CtcS1d7
 OKTA_ISSUER=https://prep.login.optimizely.com
