--- a/samples/musicfestival-frontend-nextjs/graphql.config.yml
+++ b/samples/musicfestival-frontend-nextjs/graphql.config.yml
@@ -7,4 +7,4 @@ generates:
     plugins:
       - typescript
       - typescript-operations
-      - typescript-react-query
+      - typescript-graphql-request
