update github action

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -27,11 +27,12 @@ jobs:
         repository: musicfestival
 
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: musicfestival
         username: ${{ steps.ecr.outputs.username }}
         password: ${{ steps.ecr.outputs.password }}
         registry: musicfestivalacr.azurecr.io
         workdir: samples/musicfestival-backend-dotnet
+        buildoptions: "--compress --force-rm"
         tags: "latest"
