--- a/samples/musicfestival-frontend-nextjs/package.json
+++ b/samples/musicfestival-frontend-nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "samples",
+  "name": "MusicFestival",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,31 +11,29 @@
     "generate:local": "cross-env DOTENV_CONFIG_PATH=./.env.local yarn generate -r dotenv/config"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "^3.2.2",
-    "@graphql-codegen/typescript": "^3.0.2",
-    "@graphql-codegen/typescript-operations": "^3.0.2",
-    "@graphql-codegen/typescript-react-query": "^4.1.0",
-    "@tanstack/react-query": "^4.28.0",
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "dotenv": "^16.0.3",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@tanstack/react-query": "^5.0.5",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.30",
+    "@types/react-dom": "^18.2.14",
+    "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "graphql": "^16.6.0",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.6",
+    "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
-    "html-react-parser": "^3.0.15",
-    "jsonwebtoken": "^9.0.0",
-    "next": "13.2.3",
+    "html-react-parser": "^4.2.7",
+    "next": "^13.5.6",
     "next-applicationinsights": "^1.0.4",
-    "next-auth": "^4.22.1",
-    "oidc-client": "^1.11.5",
+    "next-auth": "^4.24.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript-graphql-request": "^6.0.0",
     "cross-env": "^7.0.3"
   }
 }
